Fix mobile clipping issue by removing margin auto 0 from formCard

--- a/src/app/publish/page.module.css
+++ b/src/app/publish/page.module.css
@@ -70,7 +70,6 @@
   border: 1px solid var(--color-border);
   display: flex;
   flex-direction: column;
-  margin: auto 0;
 }
 
 .stepIndicator {
